--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.0",
     "axios": "^1.4.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
